--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -51,11 +51,12 @@ separator-foreground = ${colors.disabled}
 font-0 = IosevkaTerm Nerd Font:style=Regular:size=14;2
 
 modules-left = xwindow
+;modules-left = xwindow memory
 modules-center = i3
-;modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
 modules-right = wlan pulseaudio xkeyboard date battery
 
-click-left = #memory.toggle
+;Toggle the memory module if included in modules
+;click-right = #memory.module_toggle
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -194,7 +195,7 @@ interface-type = wireless
 ;label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 format-connected =   <label-connected>
 format-connected-foreground = ${colors.primary}
-label-connected = %essid%
+label-connected = %{A1:wifimenu:}%essid%%{A}
 label-connected-foreground = ${colors.foreground}
 
 [module/eth]
