--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -187,7 +187,7 @@ format-connected = <label-connected>
 format-connected-foreground = ${colors.foreground}
 format-disconnected = <label-disconnected>
 format-disconnected-foreground = ${colors.foreground}
-label-disconnected = %ifname% 󰖪 
+label-disconnected = %{A1:wifimenu:}%ifname% 󰖪 %{A}
 
 [module/wlan]
 inherit = network-base
