--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -63,20 +63,9 @@ shadow-opacity = 0.5;
 shadow-exclude = [
     "! name~=''",
     "name = 'Notification'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
     "name *= 'VLC'",
-    "name *= 'compton'",
     "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
     "class_g = 'Firefox' && argb",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
@@ -87,14 +76,14 @@ shadow-ignore-shaped = false;
 # Opacity
 #################################
 
-inactive-opacity = 0.6;
 active-opacity = 1;
 frame-opacity = 1;
+inactive-opacity = 0.6;
 inactive-opacity-override = false;
 
 blur: {
   method = "dual_kawase";
-  strength = 12;
+  strength = 4;
   background = false;
   background-frame = false;
   background-fixed = false;
@@ -116,12 +105,15 @@ blur-background-exclude = [
     "_NET_WM_WINDOW_TYPE:a *= '_KDE_NET_WM_WINDOW_TYPE_OVERRIDE'"
 ];
 
+# Specify a list of conditions of windows that should always be considered focused.
 focus-exclude = [
     "class_g = 'i3bar'"
 ];
 
 opacity-rule = [
   "100:class_g = 'i3bar'",
+  "100:class_g = 'Godot'",
+  "95:class_g = 'Alacritty' && focused",
   "95:class_g = 'URxvt' && focused",
   "90:class_g = 'URxvt' && !focused",
   # "95:class_g = 'URxvt' && !_NET_WM_STATE@:32a",
@@ -149,10 +141,6 @@ fade-out-step = 0.05;
 
 # Specify a list of conditions of windows that should not be faded.
 fade-exclude = [ ];
-
-#################################
-# Picom Fork Options
-#################################
 
 # Rounded corners
 corner-radius = 6.0;
@@ -200,9 +188,6 @@ dbe = false;
 # Known to cause flickering when redirecting/unredirecting windows.
 unredir-if-possible = false;
 
-# Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
-
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
 # Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
@@ -226,6 +211,8 @@ wintypes:
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
+	normal = {blur-background = true;};
+	splash = {blur-background = false;};
 };
 
 ######################
@@ -235,33 +222,3 @@ wintypes:
 
 # Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = true;
-
-blur:
-{
-  method = "dual_kawase";
-  strength = 4;
-}
-
-wintypes:
-{
-  normal = {blur-background = true;};
-  splash = {blur-background = false;};
-}
-
-# Animation settings
-# transition-length = 300;
-# transition-pow-x = 0.99;
-# transition-pow-y = 0.99;
-# transition-pow-w = 0.99;
-# transition-pow-h = 0.99;
-# size-transition = true;
-
-# Window type settings
-# wintypes:
-# {
- # tooltip = { fade = true; full-shadow = true; opacity = 1; };
- # dock = { full-shadow = true;};
- #  popup_menu = { opacity = 1; full-shadow = true; };
- # normal = {full-shadow = true;};
- #  dropdown_menu = { opacity = 1; full-shadow = true; }
-# };
