--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,7 +27,7 @@ disabled = #707880
 [bar/example]
 width = 100%
 height = 24pt
-radius = 6
+radius = 0
 
 ; dpi = 96
 
@@ -36,7 +36,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 1
@@ -160,7 +160,7 @@ format-prefix-foreground = ${colors.primary}
 label-layout = %layout%
 label-layout-foreground = ${colors.foreground}
 
-label-indicator = "󰘲 "
+label-indicator-on = "󰘲 "
 label-indicator-padding = 1
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
