--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -146,6 +146,7 @@ fade-exclude = [ ];
 corner-radius = 6.0;
 rounded-corners-exclude = [
 	"class_g = 'i3bar'",
+	"class_g = 'Polybar'",
 ];
 #################################
 # Other
