--- a/helix/config.toml
+++ b/helix/config.toml
@@ -30,3 +30,6 @@ wrap-around = true
 render = true
 character = "╎"
 skip-levels = 1
+
+[keys.normal]
+esc = ["collapse_selection", "keep_primary_selection"]
