--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -53,7 +53,7 @@ font-0 = IosevkaTerm Nerd Font:style=Regular:size=14;2
 modules-left = xwindow
 ;modules-left = xwindow memory
 modules-center = i3
-modules-right = wlan pulseaudio xkeyboard date battery
+modules-right = openvpn wlan pulseaudio xkeyboard date battery
 
 ;Toggle the memory module if included in modules
 ;click-right = #memory.module_toggle
@@ -244,6 +244,12 @@ label-full = %percentage%%
 label-charging = %percentage%%
 label-discharging = %percentage%%
 label-low = %percentage%%
+
+[module/openvpn]
+type = custom/script
+exec = ~/.config/polybar/open-vpn.sh
+label-foreground = ${colors.secondary}
+poll-interval = 5
 
 [settings]
 screenchange-reload = true
