--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -113,6 +113,7 @@ focus-exclude = [
 opacity-rule = [
   "100:class_g = 'i3bar'",
   "100:class_g = 'Godot'",
+  "100:name *= 'Godot'",
   "95:class_g = 'Alacritty' && focused",
   "95:class_g = 'URxvt' && focused",
   "90:class_g = 'URxvt' && !focused",
