--- a/helix/config.toml
+++ b/helix/config.toml
@@ -7,6 +7,7 @@ line-number = "absolute"
 auto-format = false
 color-modes = true
 scrolloff = 5
+cursorline = true
 
 [editor.statusline]
 mode.normal = "NORMAL"
@@ -33,3 +34,23 @@ skip-levels = 1
 
 [keys.normal]
 esc = ["collapse_selection", "keep_primary_selection"]
+X = ["extend_line_up", "extend_to_line_bounds"]
+A-j = ["extend_to_line_bounds", "delete_selection", "paste_after"]
+A-k = ["extend_to_line_bounds", "delete_selection", "move_visual_line_up", "paste_before"]
+
+[keys.select]
+X = ["extend_line_up", "extend_to_line_bounds"]
+A-j = ["extend_to_line_bounds", "delete_selection", "paste_after"]
+A-k = ["extend_to_line_bounds", "delete_selection", "move_visual_line_up", "paste_before"]
+
+[keys.normal.z]
+j = "page_down"
+J = "half_page_down"
+k = "page_up"
+K = "half_page_up"
+
+[keys.select.z]
+j = "page_down"
+J = "half_page_down"
+k = "page_up"
+K = "half_page_up"
