--- a/i3/config
+++ b/i3/config
@@ -62,6 +62,9 @@ bindsym $mod+Return exec --no-startup-id alacritty
 # Open a browser
 bindsym $mod+b exec --no-startup-id qutebrowser
 
+# Open a file manager
+bindsym $mod+b exec --no-startup-id thunar
+
 # Kill focused window
 bindsym $mod+q kill
 
