--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -174,8 +174,7 @@ refresh-rate = 0;
 
 # Vertical synchronization: match the refresh rate of the monitor
 # Enable/disable VSync.
-#vsync = true;
-vsync = false;
+vsync = true;
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
@@ -188,7 +187,7 @@ dbe = false;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 # Known to cause flickering when redirecting/unredirecting windows.
-unredir-if-possible = false;
+unredir-if-possible = true;
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
